<resources>
    <string name="app_name">米来</string>
    <string name="app_tip">提示</string>
    <string name="kuai_pin_produce">www.meishipintu.com</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="more">更多</string>
    <string name="grab_log">抢米明细</string>
    <string name="get_grab">抢米中</string>
    <string name="get_grab_failed">抢米失败鸟</string>
    <string name="tel_digit_error">号码位数不正确</string>
    <string name="registing">正在发送注册信息</string>
    <string name="reg_failed">注册失败</string>
    <string name="reseting_pwd">正在重置密码</string>
    <string name="reset_pwd_failed">重置密码失败</string>
    <string name="logining">正在登录</string>
    <string name="login_failed">登录失败，请重试</string>
    <string name="password">密码</string>
    <string name="hint_password">点击输入新密码</string>
    <string name="hint_old_password">填写旧密码</string>
    <string name="hint_new_password">点击输入新密码</string>
    <string name="hint_check_password">再一次输入密码</string>
    <string name="user_name_registe">用户名</string>
    <string name="confirm_new_password">提交密码修改</string>
    <string name="shop_id">识别码</string>
    <string name="nick_name">昵称</string>
    <string name="hint_nick_name">填写昵称</string>
    <string name="hint_shop_id">填写商户识别码</string>
    <string name="register">注  册</string>
    <string name="register_motto">注册后即可参加活动</string>
    <string name="forgot_password">忘记密码</string>
    <string name="hint_input_username">点击输入手机号</string>
    <string name="verify_code">获取验证码</string>
    <string name="change_pwd">修改密码</string>
    <string name="tag_old_password">旧密码</string>
    <string name="tag_new_password">新密码</string>
    <string name="change_pwd_failed">密码修改失败</string>
    <string name="hint_input_verify_code">填写验证码</string>
    <string name="second_password_input_null">二次密码输入不能为空</string>
    <string name="second_password_input_different">两次密码输入不一致</string>
    <string name="login_other">其他方式登录</string>
    <string name="skip">跳 过</string>
    <string name="back">返回</string>
    <string name="old_recomenr">往期推荐</string>
    <string name="share">分享</string>
    <string name="share_to">分享到:</string>
    <string name="like">收藏</string>
    <string name="my_like">我的收藏</string>
    <string name="yue_fan">约饭</string>
    <string name="want_to_dinner">我要约饭</string>
    <string name="shop_info">餐馆信息</string>
    <string name="city">城市</string>
    <string name="once_more_exit">再按一次退出程序</string>
    <string name="success_like">收藏成功</string>
    <string name="success_share">分享成功</string>
    <string name="success_dinner">约饭成功</string>
    <string name="please_input_key">请输入搜索关键字</string>
    <string name="load_more">显示更多</string>
    <string name="custom_pull_refresh">下拉可以刷新</string>
    <string name="refreshing_and_waiting">正在刷新，请稍候 …</string>
    <string name="custom_recently">最近更新：%s</string>
    <string name="loading">加载中 …</string>
    <string name="custom_release_to_refresh">松开可以刷新</string>
    <string name="must_know">你必须知道的…</string>
    <string name="user_name">用户昵称</string>
    <string name="locating">定位中...</string>
    <string name="prompts_waiting_location">请等待定位结果</string>
    <string name="sdcard_not_available">sd卡不可用</string>
    <string name="pick_from_camera">相机拍摄</string>
    <string name="choose_image_app">选择图片</string>
    <string name="camera_activity_not_available">没有安装相机程序</string>
    <string name="pick_from_file">手机相册</string>
    <string name="city_shanghai">上海</string>
    <string name="city_beijing">北京</string>
    <string name="city_hangzhou">杭州</string>
    <string name="city_guangzhou">广州</string>
    <string name="city_nanjing">南京</string>
    <string name="city_suzhou">苏州</string>
    <string name="city_shenzhen">深圳</string>
    <string name="city_chengdu">成都</string>
    <string name="city_chongqing">重庆</string>
    <string name="city_tianjing">天津</string>
    <string name="city_wuhan">武汉</string>
    <string name="city_xian">西安</string>
    <string name="city_haerbin">哈尔滨</string>
    <string name="city_changsha">长沙</string>
    <string name="city_kunming">昆明</string>
    <string name="city_location_wuhan">30.473902@114.337635</string>
    <string name="city_location_changsha">28.186125@112.999921</string>
    <string name="city_location_shenzhen">22.538046@113.97603</string>
    <string name="city_location_shanghai">31.232913@121.470916</string>
    <string name="city_location_chengdu">30.641014@104.034476</string>
    <string name="city_location_guangzhou">23.125758@113.261554</string>
    <string name="city_location_hangzhou">30.247001@120.166504</string>
    <string name="city_location_kunming">25.033506@102.713757</string>
    <string name="city_location_nanjing">32.071776@118.773872</string>
    <string name="city_location_chongqing">29.535528@106.553822</string>
    <string name="city_location_xian">34.267431@108.939743</string>
    <string name="city_location_beijing">39.925683@116.441667</string>
    <string name="city_location_suzhou">31.32666@120.582962</string>
    <string name="city_location_tianjing">39.134321@117.193451</string>
    <string name="city_location_haerbin">45.824014@126.534805</string>
    <string name="get_location">切换城市</string>
    <string name="gps_locate">GPS定位城市</string>
    <string name="city_sel">选择城市</string>
    <string name="prompts_invalid_city">亲，小美正在努力开通些城市的服务， 选择已开通城市试试吧！</string>
    <string name="hint_search_by_city_name">按城市名搜索</string>
    <string name="hint_search_or_add_place">搜索或添加城市</string>
    <string name="hot_city">全部热门城市</string>
    <string name="city_more">更多城市</string>
    <string name="female">女士</string>
    <string name="male">男士</string>
    <string name="city_list">城市列表</string>
    <string name="wifi_connect_failed">网络连接失败,请稍后重试</string>
    <string name="erro_acount">用户名 由2–32位字符组成</string>
    <string name="erro_http_request">网络请求失败, 代码%d</string>
    <string name="erro_pwd">密码由6–16位英文,数字,下划线和dot(.)符组成</string>
    <string name="erro_email">请输入合法的email地址</string>
    <string name="erro_profile_aboutme_size">个性签名字符不得大于140</string>
    <string name="erro_user_name_or_password">用户名或密码错误</string>
    <string name="erro_duplicate_email">邮箱已被注册</string>
    <string name="erro_old_password">原密码不正确</string>
    <string name="error_empty_input">输入不能为空!</string>
    <string name="erro_duplicate_username">用户名已被注册</string>
    <string name="erro_connection_server">连接服务器错误! 请检查网络配置!</string>
    <string name="erro_request_result_code">服务器请求出错! 代码  %d</string>
    <string name="erro_permission_denied">访问出错啦! 您无权查看! 先关注TA吧! </string>
    <string name="error_low_mem">内存不足，请释放内存重试</string>
    <string name="fail_get_location">无法获取位置信息</string>
    <string name="fail_get_location_refresh">点击重新获取</string>
    <string name="update">升级</string>
    <string name="update_echo">您已经是最新版本了！</string>
    <string name="update_tip">发现新版本: %1$s, 当前版本:%2$s, 立即更新?\n</string>
    <string name="update_description">更新内容: \n%s</string>
    <string name="prompt_must_update">发现新版本: %1$s, 当前版本:%2$s, 此版本已不可用，必须升级！\n</string>
    <string name="confirm">确 认</string>
    <string name="confirm_share">确定分享</string>
    <string name="cancel">取消</string>
    <string name="loading_new_apk">正在下载安装文件，请稍候...</string>
    <string name="fail_get_apk_file">获取安装文件错误! %s </string>
    <string name="fail_check_update">检查更新失败! 请稍后重试</string>
    <string name="fail_refresh">刷新失败! %s</string>
    <string name="fail_load_more">加载失败! %s</string>
    <string name="fail_get_place_info">获取位置信息失败! %s</string>
    <string name="fail_get_notification">刷新更新失败! %s</string>
    <string name="fail_upload_pic">上传图片失败!</string>
    <string name="bind_blog_sina">绑定新浪微博</string>
    <string name="unbind_blog_sina">解除绑定新浪微博</string>
    <string name="bind_blog_tencent">绑定腾讯微博</string>
    <string name="unbind_blog_tencent">解除绑定腾讯微博</string>
    <string name="bind_renren">绑定人人网</string>
    <string name="unbind_renren">解除绑定人人网</string>
    <string name="bind_douban">绑定豆瓣网</string>
    <string name="unbind_douban">解除绑定豆瓣网</string>
    <string name="fail_bind_sina_blog">绑定新浪微博失败! %s</string>
    <string name="fail_bind_tencent_blog">绑定腾讯微博失败! %s</string>
    <string name="fail_bind_douban_blog">绑定豆瓣网失败! %s</string>
    <string name="fail_share_sina_blog">分享新浪微博失败! %s</string>
    <string name="fail_share">分享失败! %s</string>
    <string name="share_successfully">分享成功</string>
    <string name="fail_share_tencent_blog">分享腾讯微博失败! %s</string>
    <string name="fail_bind_renren_blog">绑定人人网失败! %s</string>
    <string name="fail_share_renren_blog">分享人人网失败! %s</string>
    <string name="fail_share_douban_blog">分享到豆瓣网失败! %s</string>
    <string name="fail_login">登录失败! %s</string>
    <string name="fail_register">注册失败! %s</string>
    <string name="share_to_sms">短信分享</string>
    <string name="share_to_tencent">分享到腾讯微博</string>
    <string name="share_to_sina">分享到新浪微博</string>
    <string name="share_to_renren">分享到人人网</string>
    <string name="share_to_douban">分享到豆瓣网</string>
    <string name="share_to_wechat">分享到微信</string>
    <string name="no_date_dinner">暂无约饭记录</string>
    <string name="no_date_like">暂无收藏记录</string>
    <string name="clear_cache">清理缓存</string>
    <string name="quite_login">退出登录</string>
    <string name="prompt_clear_cache">您需要清除缓存</string>
    <string name="clearing_cache">正在清除缓存...</string>
    <string name="clear_cache_failed">清除缓存失败</string>
    <string name="clear_cache_successfully">清除缓存完成</string>
    <string name="capture_help">帮助信息</string>
    <string name="feedback">意见反馈 </string>
    <string name="about_us">关于我们</string>
    <string name="server_clause">服务条款</string>
    <string name="hint_change">点击修改</string>
    <string name="check_update">检查更新</string>
    <string name="settings">设置</string>
    <string name="unbind">确定要解除绑定吗？</string>
    <string name="collect_success">收藏成功</string>
    <string name="notice">提示</string>
    <string name="invite">邀请好友</string>
    <string name="invite_by_sms">手机短信</string>
    <string name="invite_by_renren">通过人人邀请好友</string>
    <string name="invite_by_weixin">微信好友</string>
    <string name="weixin_friend">通知微信好友</string>
    <string name="weixin_quan">通知微信好友圈</string>
    <string name="has_selected_friends">已选择的好友:</string>
    <string name="select_fans">选择好友</string>
    <string name="send">发&#160;&#160;送</string>
    <string name="average_price">%s 元/人</string>
    <string name="call">拨打电话</string>
    <string name="tag_invite">邀请</string>
    <string name="sms_invite_default_txt">我在@米来 上又发现一家特色餐厅【%1$s】 电话：%2$s 地址：%3$s &#8212;&#8212;快把美食地图装进手机里！http://www.meishipintu.com/m/down.html</string>
    <string name="sns_invite_default_txt">我在@米来 上又发现一家特色餐厅@%1$s 电话：%2$s 地址：%3$s</string>
    <string name="sns_invite_suffix">&#8212;&#8212;快把美食地图装进手机里！ http://www.meishipintu.com/m/down.html</string>
    <string name="have_liked">您已收藏过本店了</string>
    <string name="month">月</string>
    <string name="invite_share_tag">约饭邀请：</string>
    <string name="tab_fans_weibo">新浪微博</string>
    <string name="tab_fans_tencent">腾讯微博</string>
    <string name="tab_fans_qq">qq好友</string>
    <string name="tab_fans_renren">人人网</string>
    <string name="fans_sel_all">全选</string>
    <string name="fans_confirm">确 认</string>
    <string name="fans_not_selected">未选择任何粉丝</string>
    <string name="tag_at_friends">我要@的好友</string>
    <string name="please_waiting">请稍候…</string>
    <string name="no_share_platform_bound">分享未绑定</string>
    <string name="success_publish">邀请成功!</string>
    <string name="fail_publish">邀请失败!</string>
    <string name="success_share_sms">短信分享成功!</string>
    <string name="theme">主题</string>
    <string name="time">时间</string>
    <string name="local_city">您所在的城市</string>
    <string name="login">登   录</string>
    <string name="input_verification_code">点击输入验证码</string>
    <string name="login_hint1">登录或注册即同意米来有钱</string>
    <string name="login_hint2">用户服务协议</string>
    <string name="register_new">注册新用户</string>
</resources>