<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meishipintu.milai.activitys.CitySelectActivity"
    android:background="@color/light"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_30"
        android:textSize="@dimen/tv_45"
        android:textColor="@color/black_gray"
        android:text="@string/local_city"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/transparent_40_off_gray"
        />
    <TextView
        android:id="@+id/local_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_30"
        android:textSize="@dimen/tv_54"
        android:textColor="@color/black_gray"
        android:text="@string/locating"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/transparent_40_off_gray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_30"
        android:textSize="@dimen/tv_45"
        android:textColor="@color/black_gray"
        android:text="@string/hot_city"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/transparent_40_off_gray"
        />
    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>
</LinearLayout>
